--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="roots.student.loja_virtual">
    <application
-        android:label="loja_virtual"
+        android:label="Loja Virtual"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
