--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^4.1.2
   url_launcher: ^6.1.6
   carousel_slider: ^4.1.1
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
